// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generates IDE Helper 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
Written prettier.config.js
Written .eslintrc.js
Written .gitignore
",
}
`;

exports[`Generates IDE Helper 2`] = `
"// This configuration was generated by Crafty
// This file is generated to improve IDE Integration
// You don't need to commit this file, nor need it to run \`crafty build\`

// Fix module resolution
require(\\"__PATH__/packages/crafty-preset-eslint/src/patchModuleResolver.js\\");

module.exports = {
    \\"plugins\\": [
        \\"@swissquote/swissquote\\"
    ],
    \\"extends\\": [
        \\"plugin:@swissquote/swissquote/format\\",
        \\"plugin:@swissquote/swissquote/recommended\\"
    ],
    \\"rules\\": {
        \\"no-var\\": 0
    },
    \\"settings\\": {}
};
"
`;

exports[`Generates IDE Helper 3`] = `
"// This configuration was generated by Crafty
  // This file is generated to improve IDE Integration
  // You don't need to commit this file

  module.exports = {};
"
`;

exports[`Generates IDE Helper 4`] = `
"/prettier.config.js
/.eslintrc.js
"
`;

exports[`Lints JavaScript using command 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··\\"some·method\\"·\` with \`\\"some·method\\"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 14 problems (12 errors, 2 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, explicit configuration 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··\\"some·method\\"·\` with \`\\"some·method\\"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 14 problems (12 errors, 2 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, format preset 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error  Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:14  error  Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error  Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  14:9   error  Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:17  error  Replace \`··\\"some·method\\"·\` with \`\\"some·method\\"\`  @swissquote/swissquote/prettier/prettier
  18:11  error  Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier

✖ 10 problems (10 errors, 0 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, ignore crafty.config.js 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints-ignore-config/crafty.config.js
  1:1  error  'module' is not defined  no-undef

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Lints JavaScript using command, legacy 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints-es5/js/script.js
  1:1   error  Use the function form of 'use strict'  strict
  1:14  error  Replace \`·(one,\` with \`(one,·\`         @swissquote/swissquote/prettier/prettier
  2:1   error  Delete \`·\`                             @swissquote/swissquote/prettier/prettier
  5:1   error  Use the function form of 'use strict'  strict
  5:23  error  Replace \`⏎\` with \`·\`                   @swissquote/swissquote/prettier/prettier
  7:12  error  Expected '===' and instead saw '=='    eqeqeq

✖ 6 problems (6 errors, 0 warnings)
  3 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, recommended preset 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··\\"some·method\\"·\` with \`\\"some·method\\"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 14 problems (12 errors, 2 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;
